@@ -1611,7 +1611,8 @@ void CMenuTargets::OnUpdateCameraNormalizehere(CCmdUI* pCmdUI)
 {
   CameraParameters *param = mWinApp->GetCamParams() + mWinApp->GetCurrentCamera();
   pCmdUI->SetCheck(mCamera->GetProcessHere() ? 1 : 0);
-  pCmdUI->Enable(!param->TietzType && !param->AMTtype && !param->DE_camType &&
+  pCmdUI->Enable(!param->TietzType && !param->AMTtype && (!param->DE_camType || 
+    param->DE_camType >= 2) &&
     !param->K2Type && !param->OneViewType && (param->pluginName.IsEmpty() || 
     param->canDoProcessing) && !DoingTasks() && !mCamera->CameraBusy());
 }
